--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-Muh Page
+!<!DOCTYPE html>
+<!DOCTYPE html>
+<!DOCTYPE html>
+<html>
+  <head>
+
+    <meta charset="utf-8">
+    <title>Excursion</title>
+    <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
+
+  </head>
+
+  <body>
+    <h1>Discover hidden places in the world around you</h1>
+    <p><a href="#">Download Excursion (coming soon!)</a></p>
+    <video src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/videos/excursion.mp4" autoplay="yes">
+
+    </video>
+
+
+
+  </body>
+
+
+</html>
