--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-!<!DOCTYPE html>
-<!DOCTYPE html>
 <!DOCTYPE html>
 <html>
   <head>
@@ -12,10 +10,17 @@
 
   <body>
     <h1>Discover hidden places in the world around you</h1>
-    <p><a href="#">Download Excursion (coming soon!)</a></p>
+    <p class="link"><a href="#">Download Excursion (coming soon!)</a></p>
     <video src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/videos/excursion.mp4" autoplay="yes">
 
     </video>
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers the places you like, and recommends new points of interest around you.</p>
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" />
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" />
+
+    <h2>Coming soon for iPhone and Android</h2>
+    <p class="link"><a href="#">Download Excursion (coming soon!)</a></p>
 
 
 
