--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <h2>Coming soon for iPhone and Android</h2>
     <p class="link"><a href="#">Download Excursion (coming soon!)</a></p>
 
+    <p class="copyright">	&copy; Excursion</p>
+
 
 
   </body>
