--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers the places you like, and recommends new points of interest around you.</p>
     <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" />
-    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" />
+    <p><img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" /></p>
 
     <h2>Coming soon for iPhone and Android</h2>
     <p class="link"><a href="#">Download Excursion (coming soon!)</a></p>
